# calendarsupport

./: .clang-tidy  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  .reviewboardrc  CMakeLists.txt  KF5CalendarSupportConfig.cmake.in  KPimCalendarSupportConfig.cmake.in  README.md  REUSE.toml  calendarsupport.categories  calendarsupport.kdev4  calendarsupport.renamecategories  cppcheck-suppressions.xml  metainfo.yaml
.kdev4/: calendarsupport.kdev4
.reuse/: dep5
po/af/: calendarsupport.po  calendarsupport6.po
po/ar/: calendarsupport.po  calendarsupport6.po
po/ast/: calendarsupport.po  calendarsupport6.po
po/az/: calendarsupport.po  calendarsupport6.po
po/be/: calendarsupport.po  calendarsupport6.po
po/bg/: calendarsupport.po  calendarsupport6.po
po/br/: calendarsupport.po  calendarsupport6.po
po/bs/: calendarsupport.po  calendarsupport6.po
po/ca/: calendarsupport.po  calendarsupport6.po
po/ca@valencia/: calendarsupport.po  calendarsupport6.po
po/cs/: calendarsupport.po  calendarsupport6.po
po/cy/: calendarsupport.po  calendarsupport6.po
po/da/: calendarsupport.po  calendarsupport6.po
po/de/: calendarsupport.po  calendarsupport6.po
po/el/: calendarsupport.po  calendarsupport6.po
po/en_GB/: calendarsupport.po  calendarsupport6.po
po/eo/: calendarsupport.po  calendarsupport6.po
po/es/: calendarsupport.po  calendarsupport6.po
po/et/: calendarsupport.po  calendarsupport6.po
po/eu/: calendarsupport.po  calendarsupport6.po
po/fa/: calendarsupport.po  calendarsupport6.po
po/fi/: calendarsupport.po  calendarsupport6.po
po/fr/: calendarsupport.po  calendarsupport6.po
po/fy/: calendarsupport.po  calendarsupport6.po
po/ga/: calendarsupport.po  calendarsupport6.po
po/gl/: calendarsupport.po  calendarsupport6.po
po/he/: calendarsupport.po  calendarsupport6.po
po/hi/: calendarsupport.po  calendarsupport6.po
po/hne/: calendarsupport.po  calendarsupport6.po
po/hr/: calendarsupport.po  calendarsupport6.po
po/hsb/: calendarsupport.po  calendarsupport6.po
po/hu/: calendarsupport.po  calendarsupport6.po
po/ia/: calendarsupport.po  calendarsupport6.po
po/id/: calendarsupport.po  calendarsupport6.po
po/is/: calendarsupport.po  calendarsupport6.po
po/it/: calendarsupport.po  calendarsupport6.po
po/ja/: calendarsupport.po  calendarsupport6.po
po/ka/: calendarsupport.po  calendarsupport6.po
po/kk/: calendarsupport.po  calendarsupport6.po
po/km/: calendarsupport.po  calendarsupport6.po
po/ko/: calendarsupport.po  calendarsupport6.po
po/lt/: calendarsupport.po  calendarsupport6.po
po/lv/: calendarsupport.po  calendarsupport6.po
po/mai/: calendarsupport.po  calendarsupport6.po
po/mk/: calendarsupport.po  calendarsupport6.po
po/mr/: calendarsupport.po  calendarsupport6.po
po/ms/: calendarsupport.po  calendarsupport6.po
po/nb/: calendarsupport.po  calendarsupport6.po
po/nds/: calendarsupport.po  calendarsupport6.po
po/ne/: calendarsupport.po  calendarsupport6.po
po/nl/: calendarsupport.po  calendarsupport6.po
po/nn/: calendarsupport.po  calendarsupport6.po
po/pa/: calendarsupport.po  calendarsupport6.po
po/pl/: calendarsupport.po  calendarsupport6.po
po/pt/: calendarsupport.po  calendarsupport6.po
po/pt_BR/: calendarsupport.po  calendarsupport6.po
po/ro/: calendarsupport.po  calendarsupport6.po
po/ru/: calendarsupport.po  calendarsupport6.po
po/sa/: calendarsupport6.po
po/se/: calendarsupport.po  calendarsupport6.po
po/si/: calendarsupport.po  calendarsupport6.po
po/sk/: calendarsupport.po  calendarsupport6.po
po/sl/: calendarsupport.po  calendarsupport6.po
po/sq/: calendarsupport.po  calendarsupport6.po
po/sr/: calendarsupport.po  calendarsupport6.po
po/sr@ijekavian/: calendarsupport.po  calendarsupport6.po
po/sr@ijekavianlatin/: calendarsupport.po  calendarsupport6.po
po/sr@latin/: calendarsupport.po  calendarsupport6.po
po/sv/: calendarsupport.po  calendarsupport6.po
po/ta/: calendarsupport.po  calendarsupport6.po
po/tg/: calendarsupport.po  calendarsupport6.po
po/th/: calendarsupport.po  calendarsupport6.po
po/tr/: calendarsupport.po  (+1 more)
src/: CMakeLists.txt  Messages.sh  archivedialog.cpp  archivedialog.h  attachmenthandler.cpp  attachmenthandler.h  calendarplugin.desktop  calendarsingleton.cpp  calendarsingleton.h  calendarsupport-index.qdoc  calendarsupport.qdoc  calendarsupport.qdocconf  calendarutils.cpp  calendarutils.h  categoryconfig.cpp  categoryconfig.h  categoryhierarchyreader.cpp  categoryhierarchyreader.h  cellitem.cpp  cellitem.h  collectionselection.cpp  collectionselection.h  eventarchiver.cpp  eventarchiver.h  identitymanager.cpp  identitymanager.h  incidenceattachmentmodel.cpp  incidenceattachmentmodel.h  kcalmodel.cpp  kcalmodel.h  kcalprefs.cpp  kcalprefs.h  kcalprefs.kcfg  kcalprefs_base.kcfgc  kdatepickerpopup.cpp  kdatepickerpopup.h  messagewidget.cpp  messagewidget.h  noteeditdialog.cpp  noteeditdialog.h  (+8 more)
src/autotests/: CMakeLists.txt  noteeditdialogtest.cpp  noteeditdialogtest.h  placeitemtest.cpp
src/freebusymodel/: freebusycalendar.cpp  freebusycalendar.h  freebusyitem.cpp  freebusyitem.h  freebusyitemmodel.cpp  freebusyitemmodel.h  freeperiodmodel.cpp  freeperiodmodel.h
src/freebusymodel/autotests/: CMakeLists.txt  modeltest.cpp  modeltest.h  testfreebusyitemmodel.cpp  testfreebusyitemmodel.h  testfreeperiodmodel.cpp  testfreeperiodmodel.h
src/next/: incidenceviewer.cpp  incidenceviewer.h  incidenceviewer_p.h
src/printing/: calprintdayconfig_base.ui  calprintdefaultplugins.cpp  calprintdefaultplugins.h  calprinter.cpp  calprinter.h  calprintincidenceconfig_base.ui  calprintjournalconfig_base.ui  calprintmonthconfig_base.ui  calprintpluginbase.cpp  calprintpluginbase.h  calprinttodoconfig_base.ui  calprintweekconfig_base.ui  calprintyearconfig_base.ui  journalprint.cpp  journalprint.h  printplugin.h  yearprint.cpp  yearprint.h
src/printing/itemlist/: itemlistprint.cpp  itemlistprint.h  listprint.desktop
src/printing/whatsnext/: whatsnextprint.cpp  whatsnextprint.desktop  whatsnextprint.h
(+16 files in other folders)
